--- a/project/homepage.html
+++ b/project/homepage.html
@@ -65,7 +65,7 @@
         <section class="featured-team-section">
             <h2>Featured Team: <span id="featured-team-name"></span></h2>
             <p id="featured-team-description"></p>
-            <img id="featured-team-image" src="" alt="" width="400">
+            <img id="featured-team-image" src="default.jpg" alt="Featured Team" width="400">
         </section>
         <section class="player-highlights">
             <h2>Player Highlights</h2>
@@ -75,9 +75,8 @@
                     height="315" 
                     src="https://www.youtube.com/embed/vlwCMHjm4BA" 
                     title="Nikola Jokic Highlights" 
-                    frameborder="0" 
+                    style="border: none;" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    referrerpolicy="strict-origin-when-cross-origin" 
                     allowfullscreen>
                 </iframe>
                 <iframe 
@@ -85,7 +84,7 @@
                     height="315" 
                     src="https://www.youtube.com/embed/e3AgSmYvHlU" 
                     title="Jayson Tatum Highlights" 
-                    frameborder="0" 
+                    style="border: none;" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                     allowfullscreen>
                 </iframe>
