--- a/lab13/index.html
+++ b/lab13/index.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christopher Biniaris – Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Skip to Content -->
     <a href="#maincontent" class="skip-link">Skip to Content</a>
 
-    <!-- Navigation Bar -->
-    <nav>
+    <nav role="navigation">
         <a href="index.html">Home</a> <span>|</span>
         <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a>
     </nav>
 
-    <!-- Header Section -->
     <header>
         <h1>Christopher Biniaris</h1>
     </header>
 
-    <!-- Main Content Section -->
     <main id="maincontent" class="container">
         <div class="profile-container">
             <img src="lab10/headshot.png" alt="Christopher Biniaris smiling in front of a building" class="profile-image">
@@ -39,9 +38,9 @@
         </section>
     </main>
 
-    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Christopher Biniaris</p>
     </footer>
+
 </body>
 </html>
