--- a/project/players.html
+++ b/project/players.html
@@ -19,37 +19,41 @@
     <main>
         <h2>Best Players and Their Points Per Game</h2>
         <div class="content-grid">
-            <div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Team</th>
-                            <th>Best Player</th>
-                            <th>PPG (2023-24)</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr><td>Atlanta Hawks</td><td>Trae Young</td><td>26.2</td></tr>
-                        <tr><td>Boston Celtics</td><td>Jayson Tatum</td><td>30.1</td></tr>
-                        <tr><td>Brooklyn Nets</td><td>Mikal Bridges</td><td>19.6</td></tr>
-                        <tr><td>Charlotte Hornets</td><td>LaMelo Ball</td><td>31.1</td></tr>
-                        <tr><td>Chicago Bulls</td><td>Zach LaVine</td><td>24.8</td></tr>
-                        <tr><td>Cleveland Cavaliers</td><td>Donovan Mitchell</td><td>23.6</td></tr>
-                        <tr><td>Dallas Mavericks</td><td>Luka Dončić</td><td>29.0</td></tr>
-                        <tr><td>Denver Nuggets</td><td>Nikola Jokić</td><td>25.1</td></tr>
-                        <tr><td>Detroit Pistons</td><td>Cade Cunningham</td><td>20.0</td></tr>
-                        <tr><td>Golden State Warriors</td><td>Stephen Curry</td><td>25.0</td></tr>
-                        <tr><td>Houston Rockets</td><td>Alperen Şengün</td><td>21.1</td></tr>
-                        <tr><td>Indiana Pacers</td><td>Tyrese Haliburton</td><td>20.7</td></tr>
-                        <tr><td>Los Angeles Clippers</td><td>Kawhi Leonard</td><td>23.0</td></tr>
-                        <tr><td>Los Angeles Lakers</td><td>Anthony Davis</td><td>25.0</td></tr>
-                        <tr><td>Memphis Grizzlies</td><td>Ja Morant</td><td>26.0</td></tr>
-                        <tr><td>Miami Heat</td><td>Jimmy Butler</td><td>22.9</td></tr>
-                        <tr><td>Milwaukee Bucks</td><td>Giannis Antetokounmpo</td><td>32.4</td></tr>
-                        <tr><td>Minnesota Timberwolves</td><td>Anthony Edwards</td><td>27.0</td></tr>
-                        <tr><td>New Orleans Pelicans</td><td>Zion Williamson</td><td>25.0</td></tr>
-                        <tr><td>New York Knicks</td><td>Jalen Brunson</td><td>24.0</td></tr>
-                    </tbody>
-                </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Team</th>
+                        <th>Best Player</th>
+                        <th>PPG (2023-24)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>Atlanta Hawks</td><td>Trae Young</td><td>26.2</td></tr>
+                    <tr><td>Boston Celtics</td><td>Jayson Tatum</td><td>30.1</td></tr>
+                    <tr><td>Brooklyn Nets</td><td>Mikal Bridges</td><td>19.6</td></tr>
+                    <tr><td>Charlotte Hornets</td><td>LaMelo Ball</td><td>31.1</td></tr>
+                    <tr><td>Chicago Bulls</td><td>Zach LaVine</td><td>24.8</td></tr>
+                    <tr><td>Cleveland Cavaliers</td><td>Donovan Mitchell</td><td>23.6</td></tr>
+                    <tr><td>Dallas Mavericks</td><td>Luka Dončić</td><td>29.0</td></tr>
+                    <tr><td>Denver Nuggets</td><td>Nikola Jokić</td><td>25.1</td></tr>
+                    <tr><td>Detroit Pistons</td><td>Cade Cunningham</td><td>20.0</td></tr>
+                    <tr><td>Golden State Warriors</td><td>Stephen Curry</td><td>25.0</td></tr>
+                    <tr><td>Houston Rockets</td><td>Alperen Şengün</td><td>21.1</td></tr>
+                    <tr><td>Indiana Pacers</td><td>Tyrese Haliburton</td><td>20.7</td></tr>
+                    <tr><td>Los Angeles Clippers</td><td>Kawhi Leonard</td><td>23.0</td></tr>
+                    <tr><td>Los Angeles Lakers</td><td>Anthony Davis</td><td>25.0</td></tr>
+                    <tr><td>Memphis Grizzlies</td><td>Ja Morant</td><td>26.0</td></tr>
+                    <tr><td>Miami Heat</td><td>Jimmy Butler</td><td>22.9</td></tr>
+                    <tr><td>Milwaukee Bucks</td><td>Giannis Antetokounmpo</td><td>32.4</td></tr>
+                    <tr><td>Minnesota Timberwolves</td><td>Anthony Edwards</td><td>27.0</td></tr>
+                    <tr><td>New Orleans Pelicans</td><td>Zion Williamson</td><td>25.0</td></tr>
+                    <tr><td>New York Knicks</td><td>Jalen Brunson</td><td>24.0</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2024 NBA Team Rankings. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
